<resources>
    <string name="app_name">Chess Timer</string>

    //menu
    <string name="menu_load_settings">Load Settings</string>
    <string name="menu_saved_games">Saved games</string>

    //MainActivity
    <string name="player_name">name</string>
    <string name="player_timer">timer</string>
    <string name="player_1">Player 1:</string>
    <string name="player_2">Player 2:</string>
    <string name="timer_mode">Timer mode:</string>
    <string name="delay_mode">Delay mode:</string>
    <string name="delay_time">Delay time:</string>
    <string name="separator_1">-</string>
    <string name="separator_2">-</string>
    <string name="player_1_name">Player 1</string>
    <string name="player_2_name">Player 2</string>
    <string name="player_1_timer">00:30:00</string>
    <string name="player_2_timer">00:30:00</string>
    <string name="default_delay_time">00:05</string>
    <string name="default_settingsSet_name">DEFAULT</string>
    <string name="settingsSet_key">SETTING_KEY</string>


    //Alert
    <string name="save_settings_alert_title">Save Settings</string>
    <string name="save_settings_alert_text">Maximum number of settings reached</string>

    //Dialogs
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name_dialog_title">Enter player name:</string>
    <string name="time_title">time:</string>
    <string name="moves_title">moves:</string>
    <string name="default_setting_name">Set-1</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="seconds">s</string>
    <string name="save_setting_dialog_title">Save settings as:</string>
    <string name="save_game_dialog_title">Save game as:</string>
    <string name="default_game_name">Game-1</string>
    <string name="games_list_dialog_title">Games saved:</string>
    <string name="dialog_tag">fragment_alert</string>
    <string name="load_settings_title">Select settings</string>
    <string name="dots">...</string>
    <string name="check_winner_title">Check winner</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    //GameActivity
    <string name="default_clock_time">00:00:00</string>

</resources>
