<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:maxLength="8"
        android:text="@string/default_game_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/p1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="45dp"
        android:text="@string/player_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_name" />

    <TextView
        android:id="@+id/p2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:text="@string/player_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p1_name" />

    <TextView
        android:id="@+id/p1_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/player_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toStartOf="@+id/trophy_1"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toEndOf="@+id/p1_moves"
        app:layout_constraintTop_toBottomOf="@+id/time_title" />


    <TextView
        android:id="@+id/p2_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/player_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toStartOf="@+id/trophy_2"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toEndOf="@+id/p2_moves"
        app:layout_constraintTop_toBottomOf="@+id/p1_time" />

    <TextView
        android:id="@+id/moves_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="20dp"
        android:text="@string/moves_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorAccentTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_name" />

    <TextView
        android:id="@+id/p1_moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/p1_name"
        app:layout_constraintTop_toBottomOf="@+id/moves_title" />

    <TextView
        android:id="@+id/p2_moves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/player_timer"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@+id/p2_name"
        app:layout_constraintTop_toBottomOf="@+id/p1_moves" />

    <TextView
        android:id="@+id/time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/time_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorAccentTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toEndOf="@+id/moves_title"
        app:layout_constraintTop_toBottomOf="@+id/game_name" />

    <ImageView
        android:id="@+id/trophy_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="76dp"
        android:src="@drawable/ic_trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_name" />

    <ImageView
        android:id="@+id/trophy_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="76dp"
        android:src="@drawable/ic_trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophy_1" />


</androidx.constraintlayout.widget.ConstraintLayout>